@@ -61,4 +61,5 @@ Revision history for Search-OpenSearch
 0.15    xxx
         * add 't' param, deprecating 'format'
         * add 'L' param, deprecating 'link'
+        * add searcher_config and indexer_config and flesh out new() pod.
 
